# Brainsmith

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  404.html  ANALYSIS_HOOKS_IMPLEMENTATION_COMPLETE.md  ANALYSIS_HOOKS_IMPLEMENTATION_PLAN.md  ANALYSIS_MODULE_BLOAT_ASSESSMENT.md  API_SIMPLIFICATION_IMPLEMENTATION_COMPLETE.md  AUTOHWCUSTOMOP_GENERATION_ANALYSIS.md  AUTOHWCUSTOMOP_TEMPLATE_GENERATION_PLAN.md  AUTOMATION_MODULE_BLOAT_ASSESSMENT.md  AUTOMATION_SIMPLIFICATION_COMPLETE.md  AUTOMATION_SIMPLIFICATION_IMPLEMENTATION_PLAN.md  AXIOM_ADHERENCE_ANALYSIS.md  AXIOM_ALIGNMENT_ANALYSIS.md  BLUEPRINTS_CLEANUP_COMPLETE.md  BLUEPRINT_SIMPLIFICATION_COMPLETE.md  BLUEPRINT_V2_DEBUG_REPORT.md  BLUEPRINT_V2_DESIGN_DOCUMENT.md  BLUEPRINT_V2_IMPLEMENTATION_CHECKLIST.md  BLUEPRINT_V2_IMPLEMENTATION_COMPLETE.md  BLUEPRINT_V2_IMPLEMENTATION_PLAN.md  BLUEPRINT_V2_IMPLEMENTATION_STATUS.md  BRAINSMITH_ARCHITECTURE_DESIGN_DOCUMENT.md  BRAINSMITH_CRITICAL_VULNERABILITIES_IMPLEMENTATION_PLAN.md  BRAINSMITH_FOUNDATION_IMPROVEMENTS_MASTER_PLAN.md  BRAINSMITH_FOUNDATION_IMPROVEMENTS_ROADMAP.md  BRAINSMITH_LIBRARIES_REFACTORING_PLAN.md  BRAINSMITH_REPOSITORY_AUDIT_PLAN.md  BRAINSMITH_REPOSITORY_RESTRUCTURING_PLAN.md  BRAINSMITH_REPOSITORY_RESTRUCTURING_PLAN_FINAL.md  BRAINSMITH_REPOSITORY_RESTRUCTURING_PLAN_REVISED.md  BRAINSMITH_RESTRUCTURING_COMPLETION_PLAN.md  CANONICAL_TEST_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CI_FIXES.md  CLAUDE.md  CLEAN_REFACTOR_PLAN_WORKFLOW_ORIENTED.md  CMakeLists.txt  (+238 more)
.github/: CI_README.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md
_artifacts/: devlog.md  implementation_plan.md  pr.md  qonnx_lazy_loading_proposal.md
ai_cache/: README.md  notes.md
analysis_reports/: COMPREHENSIVE_HWKG_DATAFLOW_GAP_ANALYSIS.md  HWKG_DATAFLOW_SYNTHESIS_PLAN.md  IMPLEMENTATION_CHECKLIST.md
artifacts/: brainsmith-core-analysis-summary.md  brainsmith-core-capability-roadmap.md  brainsmith-core-dead-code-analysis.md  brainsmith-core-foundational-framework-analysis.md  brainsmith-core-workflow-analysis.md  brainsmith-core-workflow-diagram.md  brainsmith-workflow-endpoints-analysis.md  heresy_extermination_summary.md  plugin-system-analysis-report.md  steps-only-cleanup-summary.md  steps-only-migration-report.md  test_steps_only.py
audit/: audit_runner.py
axioms/: HWKG_AXIOMS.md  RTL_PARSER_AXIOMS.md  TOOL_REFERENCE_GUIDE.md  brainsmith-high-level.md  northstar_goals.md  refined_brainsmith_axioms.md
bert_build/: Makefile  build.py  build_bert.py  cleanup.py  endtoend.py  expected_output.npy  initial_model.py  input.npy  param_sweep.sh  results.sh
blueprint_schema/: index.html
brainsmith/: README.md  __init__.py  _version.py  constants.py  decorators.py  dependencies.py  loader.py  manifest_generator.py  plugin_helpers.py  plugins.py  registry.py  registry_adapters.py  registry_utils.py  run_job.py  transforms.py
brainsmith_documentation/: BRAINSMITH_DOCUMENTATION.md  CORE_API_REFERENCE.md  DESIGN_SPACE_EXPLORATION.md  EXTENSION_AND_ADVANCED_TOPICS.md  LIBRARIES_ECOSYSTEM.md  README_DOCUMENTATION.md
brainwave/: .gitattributes  .gitignore  CMakeLists.txt  README.md
cli_api_reference/: index.html
config/: folding_partition_0.json  folding_partition_1.json  folding_partition_2.json  specialize_layers_partition_0.json  specialize_layers_partition_1.json  specialize_layers_partition_2.json  top.json  top_new.json  top_template.json
contributing/: index.html
custom_bert/: bert_accelerator_info.json  forge_results.json
demos/: DEMO_GUIDE.md  README.md  demo_01_rtl_to_finn.py  demo_02_rtl_parser.py  run_all_demos.py  run_demos.sh
design_space_exploration/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
docker/: Dockerfile  Dockerfile.ci  brainsmith_entrypoint.sh  entrypoint-exec.sh  entrypoint.sh  entrypoint_ci.sh  entrypoint_exec.sh  entrypoint_fast.sh  env-config.sh  fetch-repos.sh  requirements.finn.txt  setup-env.sh  setup-shell.sh  setup_env.sh  setup_xilinx_env.sh  terminal-utils.sh  validate-env.sh  validate_env.sh
docs/: 404.md  API_IMPLEMENTATION_CHECKLIST.md  API_REVIEW_RESPONSE_SUMMARY.md  API_SIMPLIFICATION_IMPLEMENTATION_PLAN.md  API_SIMPLIFICATION_TECHNICAL_SPEC.md  ARCHITECTURE_OVERVIEW.md  AUTOHWCUSTOMOP_ANALYSIS.md  AUTOHWCUSTOMOP_VISUAL_ANALYSIS.md  BERT_DEMO_FILE_REFERENCE_GUIDE.md  BRAINSMITH_V2_UNIFIED_TOOLCHAIN_DESIGN.md  CI_SETUP.md  CODE_REVIEW_GUIDE.md  COMPREHENSIVE_TEST_SUITE_DESIGN.md  CRITICAL_ANALYSIS.md  DATAFLOW_MODEL_MATHEMATICAL_FRAMEWORK.md  EXPLORER_CONTEXT.md  FINN_Brainsmith_Interfacing.md  FINN_RTL_ANALYSIS.md  HKG_DESIGN_DOCUMENT.md  KernelOp_Migration_Guide.md  PHASE3_ARCHITECTURE.md  README.md  REPOSITORY_GUIDE.md  REPOSITORY_STRUCTURE_GUIDE.md  WIP-hardware_kernels_and_dataflow_modeling.md  action-runner-dependency-analysis.md  architectural_alignment_analysis.md  architectural_refinements.md  architectural_transformation_summary.md  architecture_diagrams.md  blueprint_architecture_design.md  blueprint_design_points_comprehensive.md  blueprint_implementation_progress.md  blueprint_kernel_transform_selection_design.md  blueprint_schema.md  blueprint_step_library_implementation_plan.md  brainsmith-high-level.md  brainsmith_comprehensive_design_goals.md  brainsmith_core_v2.md  brainsmith_dse_architecture_update.md  (+83 more)
docs-implementation-plan/: index.html
documentation-website-plan/: index.html
example_output/: multi_input_test.sv
examples/: README.md  ast.txt  clean_architecture_demo.py  enhanced_autohwcustomop_demo.py  enhanced_tdim_demo.py  example_vector_add.sv  inspect_ast.py  parameter_exploration_demo.py  per_interface_strategy_demo.py  phase3_enhanced_tdim_demo.py  run_rtl_parser.py  step_inheritance_example.yaml  step_inheritance_implementation.py  (+4 more)
pr-76/: 404.html  (+2 more)
scripts/: CMakeLists.txt  base.tcl.in  bd_gen.py.in  comp_hls.tcl.in  compile.tcl.in  cr_bd.tcl.in  cr_sim.tcl.in  create_export.tcl.in  create_project.tcl.in  discover_finn_transforms.py  inst_ip.tcl.in  inst_ip_shell.tcl.in  model_profiling.py  read_json.py  roofline.py  roofline_runner.py  synth.tcl.in  test_migration.py
(+3205 files in other folders)
