# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[metadata]
name = brainsmith
description = From PyTorch to RTL with no brakes
author = Thomas Keller
author_email = thomaskeller@microsoft.com
license = mit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microsoft/BrainSmith/
platforms = Linux
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    License :: OSI Approved :: MIT License,
    Operating System :: POSIX :: Linux

